apply ISO formatting to Solr date fields when converting to strings; refs #26785